assets/css/style.css
/* ... */
@media only screen and (max-width: 968px) {
  :root {
    --body-margin: var(--general-padding);
    --logo-height: 15vw;
    --hero-height: 55vh;
    --hero-font-size: 4em;
    --general-padding: 15px;
    --text-margin-bottom: 0;
  }
}

@media only screen and (max-width: 422px) {
  :root {
    --logo-height: 10vw;
  }
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: normal;
  src: url(../fonts/KlinicSlabMedium.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: normal;
  src: url(../fonts/KlinicSlabMediumIt.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: bold;
  src: url(../fonts/KlinicSlabBold.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: bold;
  src: url(../fonts/KlinicSlabBoldIt.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: 300;
  src: url(../fonts/KlinicSlabBook.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: 300;
  src: url(../fonts/KlinicSlabBookIt.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: 200;
  src: url(../fonts/KlinicSlabLight.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: 200;
  src: url(../fonts/KlinicSlabLightIt.otf);
}

@font-face {
  font-family: 'Franchise';
  src: url(../fonts/Franchise-Bold-hinted.ttf);

}

body:after{
  display: none;
  content: "Work in Progress";
  position: fixed;
  z-index: 3;
  width: 180;
  height: 25px;
  background: var(--beta-banner-colour);
  top: 40px;
  left: -45px;
  text-align: center;
  font-size: 13px;
  font-family: Kl;
  text-transform: uppercase;
  font-weight: bold;
  color: var(--light-colour);
  line-height: 27px;
  -ms-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  padding-left: 30px;
  padding-right: 30px;
}

#viewsizedebug {
  display: none;
  position: fixed;
  right:0px;
  bottom:0;
  background-color: red;
  color: white;
}

body {
  margin:0;
  width: 100vw;
  min-width: 320px;
  font-family: var(--body-font);
  font-size: var(--base-font-size);
  font-weight: 300;
  line-height: 1.5;
  color: var(--dark-colour);
  display: grid;
  background-color: var(--light-colour);
  grid-template-rows: auto var(--footer-height);
  text-align: left;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--heading-font);
  text-transform: uppercase;
  font-weight: 200;
}

h1 {
  font-size: 4em;
  margin-top: 0em;
  margin-bottom: 0.2em;
  line-height: 1.5em;
}

@media only screen and (max-width:968px) {
  h1 {
    line-height: 0.9;
    font-size: 3em;
  }
}

a {
  color: var(--highlight-colour);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

[responsive-background-image] picture, [responsive-background-image] img {
  display: none;
}

[responsive-carousel] {
  display:block;
}

.hero .carousel-overlay {
  position: absolute;
  top: 0;
  left: 0;
  display: grid;
  width: 100vw;
  height: var(--hero-height);
  grid-template-columns: calc(var(--left-body-margin) - var(--general-padding)) 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr calc(var(--right-body-margin) - var(--general-padding));
  grid-template-areas: ". text text text text text text text text text text text text .";
  grid-column-gap: var(--general-padding);
  align-content: end;
  z-index: 1;
}

.carousel-overlay h1 {
  grid-area: caption;
  justify-self: left;
  align-self: baseline;
}

.hero .carousel-images {
  overflow: hidden;
  top: 0;
  left: 0;
  display: grid;
  height: 100%;
  width: 100%;
}

.carousel-images .carousel-image {
  position: absolute;
  display: block;
  opacity: 0;
  -webkit-transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
  background-size: cover;
  width: 100%;
  height: var(--hero-height);
}

.carousel-image picture, .carousel-image img {
  overflow: hidden;
  top: 0;
  left: 0;
  max-width: 100vw;
}

footer, section, header {
  display: grid;
  /* PROPORTIONAL SIDE MARGINS */
  /* grid-template-columns: calc(var(--body-margin) - var(--general-padding)) 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr calc(var(--body-margin) - var(--general-padding)); */
  /* FIXED CENTRE WIDTH */
  grid-template-columns: calc(var(--left-body-margin) - var(--general-padding)) 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr calc(var(--right-body-margin) - var(--general-padding));
  
  grid-template-areas: ". content content content content content content content content content content content content .";
  grid-column-gap: var(--general-padding);
}

section {
  padding-top: var(--general-padding);
  padding-bottom: var(--general-padding);

  background-color: var(--light-colour);

  overflow: hidden;
}

/* NAVIGATION */

nav {
  position: absolute;
  top: 0px;
  left: 0;
  width: 100vw;
  height: var(--nav-height);

  background-color: var(--navigation-background-colour);

  display: grid;
  visibility: hidden;

  padding-top: var(--header-vertical-padding);
  padding-bottom: var(--header-vertical-padding);

  grid-template-columns: auto var(--menu-button-size);
  grid-template-rows: auto auto;
  grid-template-areas:
    ". logo logo logo menu-button ."
    ". menu-content menu-content menu-content menu-content .";
  column-gap: 15px;
  grid-row-gap: 15px;
  align-items: center;
  /* overflow: hidden; */

  z-index: 2;

  box-shadow: var(--standard-shadow);

  transition: opacity var(--menu-transition-time);
  -webkit-transition: opacity var(--menu-transition-time);
}


nav svg {
  fill: var(--dark-colour);
}

.logo svg {
  height: var(--logo-height);
  max-height: 60px;
}

@media only screen and (max-width: 968px) {
  .logo svg {
  min-height: 40px;
  }
}

.logo {
  display: inline-block;
  position: relative;
  transition: transform 0.1s;
}

nav .logo {
  grid-area: logo;
}
/* ... */

